--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,20 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+    <dimen name="medium_margin">4dp</dimen>
+    <dimen name="large_margin">16dp</dimen>
+    <dimen name="xlarge_margin">24dp</dimen>
+
+    <dimen name="medium_padding">4dp</dimen>
+    <dimen name="large_padding">10dp</dimen>
+    <dimen name="xlarge_padding">16dp</dimen>
+
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="medium_text">16sp</dimen>
+    <dimen name="large_text">20sp</dimen>
+
+    <dimen name="small_radius">5dp</dimen>
+    <dimen name="medium_radius">10dp</dimen>
+
+    <dimen name="small_calendar_height">350dp</dimen>
 </resources>
