--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,6 +28,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@drawable/chat_24" />
+        app:srcCompat="@drawable/robot_head" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
