--- a/app/src/main/res/layout/view_chat_received_voice.xml
+++ b/app/src/main/res/layout/view_chat_received_voice.xml
@@ -27,9 +27,9 @@
 
             <ImageView
                 android:id="@+id/play_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/speak" />
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/robot_head" />
 
             <androidx.appcompat.widget.AppCompatSeekBar
                 android:id="@+id/voice_seekbar"
