--- a/app/src/main/res/drawable/style_radius_sent_message.xml
+++ b/app/src/main/res/drawable/style_radius_sent_message.xml
@@ -7,7 +7,7 @@
         android:bottomRightRadius="8dp"
         android:topLeftRadius="8dp"
         android:topRightRadius="0dp" />
-    <solid android:color="?attr/colorAccent" />
+    <solid android:color="@color/ic_launcher_background" />
 
     <padding
         android:bottom="2dp"
