--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/cardview_shadow_end_color"
     tools:context=".ui.home.HomeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -27,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="16dp"
-        app:srcCompat="@drawable/robot_head" />
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:backgroundTint="@color/white"
+        app:srcCompat="@drawable/robot_carton_svg" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
