--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/HomeFragment"
-        android:name="com.smarttech.alpha_robot.ui.home.HomeFragment"
+        android:name="com.smart24.alpha_robot.ui.home.HomeFragment"
         android:label="@string/home_fragment_label"
         tools:layout="@layout/fragment_home">
 
@@ -18,7 +18,7 @@
     </fragment>
     <fragment
         android:id="@+id/ChatFragment"
-        android:name="com.smarttech.alpha_robot.ui.chatbot.ChatBotFragment"
+        android:name="com.smart24.alpha_robot.ui.chatbot.ChatBotFragment"
         android:label="@string/chat_fragment_label"
         tools:layout="@layout/fragment_chat">
 
