--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,11 +23,12 @@
         android:id="@+id/welcome_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/droid_kuffi_bold"
+        android:fontFamily="@font/droid_kuffi"
         android:gravity="center"
+        android:textColor="@color/white"
         android:text="@string/welcome_text"
-        android:textColor="?attr/colorAccent"
-        android:textSize="@dimen/medium_text"
+        android:textSize="@dimen/large_text"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_logo" />
