--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,6 +10,7 @@
         android:id="@+id/bot_icon"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -58,7 +59,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <EditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/text_ed"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -74,12 +75,12 @@
             app:layout_constraintEnd_toStartOf="@id/send_icon"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/send_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="2dp"
-            android:src="@drawable/send"
+            app:srcCompat="@drawable/send"
             app:layout_constraintBottom_toBottomOf="@id/text_ed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/text_ed" />
