--- a/app/src/main/res/layout/view_chat_received_voice.xml
+++ b/app/src/main/res/layout/view_chat_received_voice.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
-    android:layout_marginTop="@dimen/medium_margin"
+    android:layout_marginTop="@dimen/x_medium_margin"
     android:layout_marginEnd="@dimen/xlarge_margin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
