--- a/app/src/main/res/layout/view_chat_sent_text.xml
+++ b/app/src/main/res/layout/view_chat_sent_text.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="end"
     android:layout_marginStart="@dimen/xlarge_margin"
-    android:layout_marginTop="@dimen/medium_margin">
+    android:layout_marginTop="@dimen/x_medium_margin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
