--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="small_margin">4dp</dimen>
     <dimen name="medium_margin">4dp</dimen>
+    <dimen name="x_medium_margin">8dp</dimen>
     <dimen name="large_margin">16dp</dimen>
     <dimen name="xlarge_margin">24dp</dimen>
 
