--- a/app/src/main/res/layout/view_chat_received_voice.xml
+++ b/app/src/main/res/layout/view_chat_received_voice.xml
@@ -35,6 +35,8 @@
                 android:id="@+id/voice_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:max="100"
+                android:visibility="gone"
                 android:progress="0" />
         </LinearLayout>
 
@@ -44,6 +46,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/droid_kuffi"
             android:text="@string/duration"
+            android:visibility="gone"
             android:textColor="@color/white"
             android:textSize="@dimen/small_text"
             app:layout_constraintStart_toStartOf="parent"
