--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ic_launcher_background"
+    android:background="@drawable/chat_bckg_img"
     tools:context=".ui.SplashActivity">
 
     <ImageView
         android:id="@+id/app_logo"
         android:layout_width="170dp"
         android:layout_height="150dp"
-        android:scaleType="fitStart"
+        android:scaleType="fitXY"
         android:src="@drawable/robot_carton_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
