--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -64,7 +64,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/medium_margin"
-            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginStart="@dimen/large_margin"
             android:layout_marginBottom="@dimen/medium_margin"
             android:autofillHints="@drawable/style_rounded_edittext_bg"
             android:background="@drawable/style_rounded_edittext_bg"
