finalize text to speech

--- a/app/src/main/res/drawable/style_voice_play_radius_backg.xml
+++ b/app/src/main/res/drawable/style_voice_play_radius_backg.xml
@@ -3,8 +3,8 @@
     <corners android:radius="30dp" />
     <solid android:color="@color/design_default_color_background" />
     <padding
-        android:bottom="@dimen/xlarge_padding"
+        android:bottom="@dimen/medium_padding"
         android:left="@dimen/large_padding"
         android:right="@dimen/large_padding"
-        android:top="@dimen/xlarge_padding" />
+        android:top="@dimen/medium_padding" />
 </shape>
