--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,14 +21,15 @@
 
     <TextView
         android:id="@+id/welcome_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/droid_kuffi"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:background="@drawable/style_radius_sent_message"
         android:gravity="center"
+        android:fontFamily="@font/droid_kuffi_bold"
         android:textColor="@color/white"
         android:text="@string/welcome_text"
         android:textSize="@dimen/large_text"
-        android:textStyle="italic"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_logo" />
