--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,9 @@
     <dimen name="large_margin">16dp</dimen>
     <dimen name="xlarge_margin">24dp</dimen>
 
+    <dimen name="small_padding">2dp</dimen>
     <dimen name="medium_padding">4dp</dimen>
-    <dimen name="large_padding">10dp</dimen>
+    <dimen name="large_padding">8dp</dimen>
     <dimen name="xlarge_padding">16dp</dimen>
 
     <dimen name="small_text">12sp</dimen>
