finalize chatting with bot

--- a/app/src/main/res/layout/view_chat_received_voice.xml
+++ b/app/src/main/res/layout/view_chat_received_voice.xml
@@ -17,10 +17,11 @@
 
         <LinearLayout
             android:id="@+id/play_voice_layout"
-            android:layout_width="220dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/style_voice_play_radius_backg"
             android:backgroundTint="@color/material_on_background_disabled"
+            android:gravity="start"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -29,6 +30,7 @@
                 android:id="@+id/play_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_gravity="start"
                 android:src="@drawable/robot_carton_icon" />
 
             <androidx.appcompat.widget.AppCompatSeekBar
@@ -40,6 +42,15 @@
                 android:progress="0" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/transcribed_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/droid_kuffi"
+            android:textColor="@color/white"
+            android:textSize="@dimen/small_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/play_voice_layout" />
 
         <TextView
             android:id="@+id/duration_tv"
@@ -51,7 +62,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/small_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/play_voice_layout" />
+            app:layout_constraintTop_toBottomOf="@id/transcribed_message" />
 
         <TextView
             android:id="@+id/date"
@@ -62,7 +73,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/small_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/play_voice_layout" />
+            app:layout_constraintTop_toBottomOf="@id/transcribed_message" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
