--- a/app/src/main/res/layout/view_chat_sent_voice.xml
+++ b/app/src/main/res/layout/view_chat_sent_voice.xml
@@ -17,9 +17,10 @@
 
         <LinearLayout
             android:id="@+id/play_voice_layout"
-            android:layout_width="220dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/style_voice_play_radius_backg"
+            android:gravity="start"
             android:backgroundTint="@color/material_on_background_disabled"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
                 android:id="@+id/play_icon"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_gravity="end"
                 android:tint="@color/white"
                 app:srcCompat="@drawable/speak" />
 
