refactor package name and starting in the new figma design

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="46"
+    android:viewportHeight="46">
+  <group android:scaleX="0.45"
+      android:scaleY="0.45"
+      android:translateX="12.65"
+      android:translateY="12.65">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M38.805,24.199C37.574,19.127 32.842,15.531 27.493,15.531H14.8L15.771,9.953C15.962,8.818 15.087,7.779 13.938,7.779C13.035,7.779 12.256,8.435 12.105,9.324L11.025,15.531H7.044L9.137,2.447C9.328,1.313 8.453,0.273 7.304,0.273C6.401,0.273 5.622,0.93 5.471,1.818L3.611,13.59C3.105,16.543 5.375,19.25 8.385,19.25H27.575C31.611,19.25 35.139,22.285 35.399,26.304C35.7,30.72 32.185,34.398 27.835,34.398H3.748L5.321,25.429C5.526,24.295 4.65,23.256 3.488,23.256C2.585,23.256 1.805,23.898 1.655,24.787L0.055,33.947C-0.328,36.134 1.354,38.13 3.57,38.13H7.044L6.702,40.14C6.196,43.093 8.467,45.8 11.476,45.8H32.212H33.881C39.831,45.8 45.029,41.343 45.494,35.41C45.891,30.433 43.018,26.072 38.805,24.199ZM41.76,35.246C41.39,39.183 37.903,42.082 33.95,42.082H10.135L10.819,38.13H25.797H27.808C33.43,38.13 38.094,34.001 38.956,28.615C40.857,30.146 42.006,32.566 41.76,35.232V35.246Z"
+        android:fillColor="#51519E"/>
+  </group>
 </vector>
