--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,33 +5,18 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chat_bckg_img"
+    android:background="@drawable/background_img"
     tools:context=".ui.SplashActivity">
 
     <ImageView
         android:id="@+id/app_logo"
         android:layout_width="170dp"
         android:layout_height="150dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/robot_carton_icon"
+        android:scaleType="fitCenter"
+        android:src="@drawable/face_2_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/welcome_text"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:background="@drawable/style_radius_sent_message"
-        android:gravity="center"
-        android:fontFamily="@font/droid_kuffi_bold"
-        android:textColor="@color/white"
-        android:text="@string/welcome_text"
-        android:textSize="@dimen/large_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
